--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
   },
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
+    "@types/react-redux": "^7.1.9",
     "document-register-element": "1.13.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-redux": "^7.2.1"
   },
   "devDependencies": {
     "@babel/core": "7.9.6",
@@ -62,6 +65,7 @@
     "eslint-plugin-react-hooks": "4.0.4",
     "jest": "26.2.2",
     "prettier": "2.0.4",
+    "redux-devtools": "^3.7.0",
     "ts-jest": "26.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
